kubernetes/projects/home-automation/apps/cluster-ops/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-ops
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cluster-ops
    app.kubernetes.io/part-of: home-automation
    field.cattle.io/projectId: p-qqtgt
    kubernetes.io/metadata.name: cluster-ops
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-qqtgt
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: cluster-ops
    meta.helm.sh/release-namespace: cluster-ops
